--- a/test.css
+++ b/test.css
@@ -15,11 +15,17 @@ html {
 /* liens de naviguation */
 
 h1 {
-    padding: auto;
+    padding: 0.1em;
     overflow-y: auto;
     color: rgb(255, 255, 255);
-    grid-template: auto;
+    grid-template: 20;
 
+}
+
+h1 a, h3 {
+    font-size: 5;
+    color: rgb(255, 255, 255);
+    text-decoration: rgb(90, 0, 0);
 }
 
 nav ul
@@ -38,9 +44,9 @@ nav li
 
 nav a
 {
-    font-size: vw;
+    font-size: 1;
     color: rgb(255, 255, 255);
-    padding-bottom: 0%;
+    padding-bottom: 5%;
     text-decoration: rgb(90, 0, 0);
 }
 
@@ -55,54 +61,97 @@ header {
     height: 12%;
 }
 
-div.container {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    filter: none;
+img {
+    width: 20%;
 }
 
-#sliders {
-    margin: 30px;
-}
-
-#sliders h3 {
-    font-size: 1.5vw;
-    margin-bottom: 2px;
-}
-
-div.slider {
-    width: 100%;
-    overflow: visible;
-    transition: 1s;
-    text-indent: 0;
-    white-space: nowrap;
-    position: relative;
-    
-}
-
-
-
+.movie_item img:hover {
+    transform: scale(1.4);
+    z-index: 5;
+  }
 /* modale*/
 
-#best, #cat1, #cat2, #cat3 {
-    display: flex;
-    -ms-overflow-style: touch;
-    overflow-x: auto;
-    scroll-snap-type: both mandatory;
+
+/* essai carousel */
+
+.carousel {
+    height: 250px;
+    width: 80%;
+    position: relative;
+}
+.carousel .switchLeft,
+.carousel .switchRight {
+    color: white;
+    font-weight: bold;
+    height: 100%;
+    width: 45px;
+    line-height: 250px;
+    font-size: 25px;
+    text-align: center;
+    background-color: lightgreen;
+    font-family: sans-serif;
+    top: 0;
+    z-index: 3;
+}
+  
+.carousel .switchLeft {
+    position: absolute;
+    left: -50px;
   }
   
-.movie_item {
+  .carousel .switchRight {
+    position: absolute;
+  
+    right: -50px;
+  }
+  
+  .carouselbox {
+    height: 250px;
+    width: auto;
+    overflow: hidden;
+    white-space: nowrap;
+    display: inline-block;
+    text-align: center;
+    padding-bottom: 10px !important;
+    display: flex;
     align-items: center;
-    display: flex;
-    flex: 0 0 auto;
-    padding: .5rem;
-    scroll-snap-align: start;
-    transition: width 0.3s ease-out 0.15s;
-    width: 50%;
-  }
+}
   
-  img {
-    width: 50%;
-  }
+  .carouselbox img {
+    min-width: 147px;
+    max-width: 147px;
+    height: 200px;
+    background-size: cover;
+    background-color: lightgreen;
+    margin: 5px 10px;
+    cursor: pointer;
+    transition: 0.5s ease;
+    z-index: 2;
   
+}
+
+.carousel .switchLeft,
+.carousel .switchRight {
+  color: white;
+  font-weight: bold;
+  height: 100%;
+  width: 45px;
+  line-height: 250px;
+  font-size: 25px;
+  text-align: center;
+  background-color: lightgreen;
+  font-family: sans-serif;
+  top: 0;
+  z-index: 3;
+}
+
+.carousel .switchLeft {
+  position: absolute;
+  left: 10px;
+}
+
+.carousel .switchRight {
+  position: absolute;
+
+  right: -50px;
+}
