--- a/test.css
+++ b/test.css
@@ -18,12 +18,12 @@ h1 {
     padding: 0.1em;
     overflow-y: auto;
     color: rgb(255, 255, 255);
-    grid-template: 20;
+    grid-template: 20em;
 
 }
 
 h1 a, h3 {
-    font-size: 5;
+    font-size: 3em;
     color: rgb(255, 255, 255);
     text-decoration: rgb(90, 0, 0);
 }
@@ -44,7 +44,7 @@ nav li
 
 nav a
 {
-    font-size: 1;
+    font-size: 2em;
     color: rgb(255, 255, 255);
     padding-bottom: 5%;
     text-decoration: rgb(90, 0, 0);
@@ -61,16 +61,70 @@ header {
     height: 12%;
 }
 
-img {
-    width: 20%;
-}
 
 .movie_item img:hover {
     transform: scale(1.4);
     z-index: 5;
   }
-/* modale*/
 
+/* modale*/
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 5%;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.822);
+}
+
+.modal-content {
+  background-color: rgb(245, 245, 245);
+  height: 550px;
+  width: 60%;
+  min-width: 800px;
+  margin: auto;
+  padding: 50px;
+  border: 5px solid rgb(73, 80, 94);
+  overflow: auto;
+}
+
+.id_img, .id_info, .id_other {
+  position: absolute;
+}
+
+.id_info {
+  margin-left: 210px;
+  margin-top: 35px;
+  margin-right: 20%;
+  min-width: 650px;
+}
+
+.id_other {
+  margin-top: 300px;
+  margin-right: 20%;
+  min-width: 650px;
+}
+
+.close {
+  color: rgb(73, 80, 94);
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#best_img {
+  max-width: 75%;
+}
 
 /* essai carousel */
 
@@ -79,33 +133,9 @@ img {
     width: 80%;
     position: relative;
 }
-.carousel .switchLeft,
-.carousel .switchRight {
-    color: white;
-    font-weight: bold;
-    height: 100%;
-    width: 45px;
-    line-height: 250px;
-    font-size: 25px;
-    text-align: center;
-    background-color: lightgreen;
-    font-family: sans-serif;
-    top: 0;
-    z-index: 3;
-}
-  
-.carousel .switchLeft {
-    position: absolute;
-    left: -50px;
-  }
-  
-  .carousel .switchRight {
-    position: absolute;
-  
-    right: -50px;
-  }
-  
-  .carouselbox {
+
+
+.carouselbox {
     height: 250px;
     width: auto;
     overflow: hidden;
@@ -117,41 +147,45 @@ img {
     align-items: center;
 }
   
-  .carouselbox img {
+.carouselbox img {
     min-width: 147px;
-    max-width: 147px;
+    max-width: 500px;
     height: 200px;
     background-size: cover;
     background-color: lightgreen;
-    margin: 5px 10px;
+    margin: 10px 10px;
     cursor: pointer;
-    transition: 0.5s ease;
+    transition: 0.8s ease;
     z-index: 2;
   
 }
 
-.carousel .switchLeft,
-.carousel .switchRight {
-  color: white;
-  font-weight: bold;
-  height: 100%;
-  width: 45px;
-  line-height: 250px;
-  font-size: 25px;
-  text-align: center;
-  background-color: lightgreen;
-  font-family: sans-serif;
-  top: 0;
-  z-index: 3;
+.carouselbox {
+  display: flex;
+  overflow-x: scroll;
+  padding: 1rem 0;
+}
+.movie_item {
+  margin-left: 1rem;
 }
 
-.carousel .switchLeft {
-  position: absolute;
-  left: 10px;
+:-webkit-scrollbar-track {
+  background-color: #F5F5F5;
 }
 
-.carousel .switchRight {
-  position: absolute;
+::-webkit-scrollbar {
+  height: 6px;
+  background-color: #F5F5F5;
+}
 
-  right: -50px;
+::-webkit-scrollbar-thumb {
+  background-color: #3d4852;
+  border-radius: 3px;
+}
+
+@media screen and (min-width: 576px) {
+  .movie_item {
+      flex-basis: 450px;
+
+  }
 }
