--- a/test.css
+++ b/test.css
@@ -123,7 +123,9 @@ header {
 }
 
 #best_img {
-  max-width: 75%;
+  width: 45%;
+  padding: 1em 9em;
+  margin: 1em 9em;
 }
 
 /* essai carousel */
@@ -148,7 +150,7 @@ header {
 }
   
 .carouselbox img {
-    min-width: 147px;
+    min-width: 230px;
     max-width: 500px;
     height: 200px;
     background-size: cover;
