--- a/style/test.css
+++ b/style/test.css
@@ -19,7 +19,7 @@ h3 {
   width: 5em;
 }
 
-#carousel_1 {
+.carousel {
   width: 100%;
   max-width: 964px;
   position: relative;
@@ -27,18 +27,19 @@ h3 {
   margin-right: auto;
 }
 
-#container {
+.carousel__container {
   overflow: auto;
   scroll-behavior: smooth;
   scrollbar-width: none;
 }
 
-#container::-webkit-scrollbar {
+.carousel__container::-webkit-scrollbar {
   height: 0;
 }
 
-#prev,
-#next {
+.buttonnext,
+.buttonprev
+ {
   display: flex;
   justify-content: center;
   align-content: center;
@@ -51,20 +52,20 @@ h3 {
   position: absolute;
 }
 
-#prev {
+.buttonprev {
   top: 50%;
   left: 0;
   transform: translate(50%, -50%);
   display: none;
 }
 
-#next {
+.buttonnext {
   top: 50%;
   right: 0;
   transform: translate(-50%, -50%);
 }
 
-#content {
+.content {
   display: grid;
   grid-gap: 16px;
   grid-auto-flow: column;
@@ -72,8 +73,96 @@ h3 {
   box-sizing: border-box;
 }
 
-.movie__item {
-  width: 180px;
-  height: 180px;
-  background: green;
+
+.center {
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+}
+.popup {
+  width:350px;
+  height:280px;
+  padding:30px 20px;
+  background:#f5f5f5;
+  border-radius:10px;
+  box-sizing:border-box;
+  z-index:2;
+  text-align:center;
+  opacity:0;
+  top:-200%;
+  transform:translate(-50%,-50%) scale(0.5);
+  transition: opacity 300ms ease-in-out,
+              top 1000ms ease-in-out,
+              transform 1000ms ease-in-out;
+}
+.popup.active {
+  opacity:1;
+  top:50%;
+  transform:translate(-50%,-50%) scale(1);
+  transition: transform 300ms cubic-bezier(0.18,0.89,0.43,1.19);
+}
+.popup .icon {
+  margin:5px 0px;
+  width:50px;
+  height:50px;
+  border:2px solid #34f234;
+  text-align:center;
+  display:inline-block;
+  border-radius:50%;
+  line-height:60px;
+}
+.popup .icon i.fa {
+  font-size:30px;
+  color:#34f234;
+} 
+.popup .title {
+  margin:5px 0px;
+  font-size:30px;
+  font-weight:600;
+}
+.popup .description {
+  color:#222;
+  font-size:15px;
+  padding:5px;
+}
+.popup .dismiss-btn {
+  margin-top:15px;
+}
+.popup .dismiss-btn button {
+  padding:10px 20px;
+  background:#111;
+  color:#f5f5f5;
+  border:2px solid #111;
+  font-size:16px;
+  font-weight:600;
+  outline:none;
+  border-radius:10px;
+  cursor:pointer;
+  transition: all 300ms ease-in-out;
+}
+.popup .dismiss-btn button:hover {
+  color:#111;
+  background:#f5f5f5;
+}
+.popup > div {
+  position:relative;
+  top:10px;
+  opacity:0;
+}
+.popup.active > div {
+  top:0px;
+  opacity:1;
+}
+.popup.active .icon {
+  transition: all 300ms ease-in-out 250ms;
+}
+.popup.active .title {
+  transition: all 300ms ease-in-out 300ms;
+}
+.popup.active .description {
+  transition: all 300ms ease-in-out 350ms;
+}
+.popup.active .dismiss-btn {
+  transition: all 300ms ease-in-out 400ms;
 }
