--- a/style/test.css
+++ b/style/test.css
@@ -30,7 +30,6 @@ h3 {
 .carousel__container {
   overflow: auto;
   scroll-behavior: smooth;
-  scrollbar-width: none;
 }
 
 .carousel__container::-webkit-scrollbar {
@@ -73,96 +72,74 @@ h3 {
   box-sizing: border-box;
 }
 
-
 .center {
   position:absolute;
   top:50%;
   left:50%;
   transform:translate(-50%,-50%);
 }
-.popup {
-  width:350px;
-  height:280px;
-  padding:30px 20px;
-  background:#f5f5f5;
-  border-radius:10px;
-  box-sizing:border-box;
-  z-index:2;
-  text-align:center;
-  opacity:0;
-  top:-200%;
-  transform:translate(-50%,-50%) scale(0.5);
-  transition: opacity 300ms ease-in-out,
-              top 1000ms ease-in-out,
-              transform 1000ms ease-in-out;
+
+.modal {
+  display: block; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  -webkit-animation-name: fadeIn; /* Fade in the background */
+  -webkit-animation-duration: 0.4s;
+  animation-name: fadeIn;
+  animation-duration: 0.4s
 }
-.popup.active {
-  opacity:1;
-  top:50%;
-  transform:translate(-50%,-50%) scale(1);
-  transition: transform 300ms cubic-bezier(0.18,0.89,0.43,1.19);
+
+.modal-content {
+  position: relative; 
+  background-color: white;
+  padding: 20px; 
+  margin: auto; 
+  width: 75%;  
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s
 }
-.popup .icon {
-  margin:5px 0px;
-  width:50px;
-  height:50px;
-  border:2px solid #34f234;
-  text-align:center;
-  display:inline-block;
-  border-radius:50%;
-  line-height:60px;
+.close-btn {
+ /* The Close Button */
+
+  color: white;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
 }
-.popup .icon i.fa {
-  font-size:30px;
-  color:#34f234;
-} 
-.popup .title {
-  margin:5px 0px;
-  font-size:30px;
-  font-weight:600;
+
+.close-.close-btn,
+.close-.close-btn {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
-.popup .description {
-  color:#222;
-  font-size:15px;
-  padding:5px;
+
+/* Add Animation */
+@-webkit-keyframes slideIn {
+  from {bottom: -300px; opacity: 0} 
+  to {bottom: 0; opacity: 1}
 }
-.popup .dismiss-btn {
-  margin-top:15px;
+
+@keyframes slideIn {
+  from {bottom: -300px; opacity: 0}
+  to {bottom: 0; opacity: 1}
 }
-.popup .dismiss-btn button {
-  padding:10px 20px;
-  background:#111;
-  color:#f5f5f5;
-  border:2px solid #111;
-  font-size:16px;
-  font-weight:600;
-  outline:none;
-  border-radius:10px;
-  cursor:pointer;
-  transition: all 300ms ease-in-out;
+
+@-webkit-keyframes fadeIn {
+  from {opacity: 0} 
+  to {opacity: 1}
 }
-.popup .dismiss-btn button:hover {
-  color:#111;
-  background:#f5f5f5;
-}
-.popup > div {
-  position:relative;
-  top:10px;
-  opacity:0;
-}
-.popup.active > div {
-  top:0px;
-  opacity:1;
-}
-.popup.active .icon {
-  transition: all 300ms ease-in-out 250ms;
-}
-.popup.active .title {
-  transition: all 300ms ease-in-out 300ms;
-}
-.popup.active .description {
-  transition: all 300ms ease-in-out 350ms;
-}
-.popup.active .dismiss-btn {
-  transition: all 300ms ease-in-out 400ms;
+
+@keyframes fadeIn {
+  from {opacity: 0} 
+  to {opacity: 1}
 }
