--- a/style/test.css
+++ b/style/test.css
@@ -15,7 +15,7 @@ h1 {
 
 h3 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: rgb(243, 239, 239);
+  color: #f3efef;
   width: 5em;
 }
 
@@ -37,11 +37,15 @@ h3 {
 }
 
 .buttonnext,
-.buttonprev
- {
+.buttonprev {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
   background: white;
   border: none;
   padding: 8px;
@@ -54,92 +58,80 @@ h3 {
 .buttonprev {
   top: 50%;
   left: 0;
-  transform: translate(50%, -50%);
+  -webkit-transform: translate(50%, -50%);
+          transform: translate(50%, -50%);
   display: none;
 }
 
 .buttonnext {
   top: 50%;
   right: 0;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 .content {
+  display: -ms-grid;
   display: grid;
   grid-gap: 16px;
   grid-auto-flow: column;
   margin: auto;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .center {
-  position:absolute;
-  top:50%;
-  left:50%;
-  transform:translate(-50%,-50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 .modal {
-  display: block; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  -webkit-animation-name: fadeIn; /* Fade in the background */
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: black;
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
+  -webkit-animation-name: fadeIn;
+  /* Fade in the background */
   -webkit-animation-duration: 0.4s;
   animation-name: fadeIn;
-  animation-duration: 0.4s
+  animation-duration: 0.4s;
 }
 
 .modal-content {
-  position: relative; 
+  position: relative;
   background-color: white;
-  padding: 20px; 
-  margin: auto; 
-  width: 75%;  
+  padding: 20px;
+  margin: auto;
+  width: 75%;
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
-  animation-duration: 0.4s
+  animation-duration: 0.4s;
 }
-.close-btn {
- /* The Close Button */
 
+.close-btn {
+  /* The Close Button */
   color: white;
   float: right;
-  font-size: 28px;
+  font-size: 18px;
   font-weight: bold;
-}
-
-.close-.close-btn,
-.close-.close-btn {
-  color: #000;
-  text-decoration: none;
   cursor: pointer;
 }
-
-/* Add Animation */
-@-webkit-keyframes slideIn {
-  from {bottom: -300px; opacity: 0} 
-  to {bottom: 0; opacity: 1}
-}
-
-@keyframes slideIn {
-  from {bottom: -300px; opacity: 0}
-  to {bottom: 0; opacity: 1}
-}
-
-@-webkit-keyframes fadeIn {
-  from {opacity: 0} 
-  to {opacity: 1}
-}
-
-@keyframes fadeIn {
-  from {opacity: 0} 
-  to {opacity: 1}
-}
+/*# sourceMappingURL=test.css.map */
