--- a/style/test.css
+++ b/style/test.css
@@ -1,3 +1,4 @@
+/* --- PAGE ---*/
 html {
   scroll-behavior: smooth;
 }
@@ -9,16 +10,66 @@ body {
 
 h1 {
   font-family: Arial;
-  color: red;
+  color: rgba(184, 41, 41, 0.986);
   text-align: center;
+  margin: 0 0 15px 5%;
+}
+
+h1 a:visited, h1 a:hover, h1 a :focus {
+  text-decoration: none;
+  color: #ffa2a2;
 }
 
 h3 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: #f3efef;
+  color: #ffa2a2;
   width: 5em;
+  text-align: left;
+  margin-top: 8%;
+  margin-left: 6%;
 }
 
+nav ul {
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-right: 18px;
+  margin-bottom: 40px;
+}
+
+nav li {
+  margin-right: 50px;
+}
+
+nav a {
+  font-size: 1.3em;
+  color: #ffdddd;
+  margin-bottom: 25px;
+  text-decoration: none;
+}
+
+nav a:hover {
+  color: #b1acac;
+}
+
+#best_img {
+  padding-left: 50%;
+  padding-right: 50%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 14em;
+}
+
+h2, p {
+  -webkit-text-decoration: white;
+          text-decoration: white;
+  color: white;
+  margin-left: 15%;
+}
+
+/* --- CAROUSEL --- */
 .carousel {
   width: 100%;
   max-width: 964px;
@@ -88,6 +139,7 @@ h3 {
           transform: translate(-50%, -50%);
 }
 
+/* --- MODAL --- */
 .modal {
   display: none;
   /* Hidden by default */
@@ -103,10 +155,11 @@ h3 {
   /* Full height */
   overflow: auto;
   /* Enable scroll if needed */
-  background-color: black;
-  /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4);
-  /* Black w/ opacity */
+  padding-top: 50px;
+  width: 100%;
+  height: 100%;
+  background-color: #ee6060;
+  background-color: rgba(197, 38, 38, 0.5);
   -webkit-animation-name: fadeIn;
   /* Fade in the background */
   -webkit-animation-duration: 0.4s;
@@ -116,10 +169,11 @@ h3 {
 
 .modal-content {
   position: relative;
-  background-color: white;
+  background-color: #fcbdbd;
   padding: 20px;
   margin: auto;
   width: 75%;
+  text-justify: auto;
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
@@ -128,10 +182,57 @@ h3 {
 
 .close-btn {
   /* The Close Button */
-  color: white;
+  color: rgba(12, 1, 1, 0.048);
   float: right;
-  font-size: 18px;
+  font-size: 28px;
   font-weight: bold;
+}
+
+.close-btn:hover,
+.close-btn:focus {
+  color: #070404;
+  text-decoration: none;
   cursor: pointer;
+}
+
+/* Add Animation */
+@-webkit-keyframes slideIn {
+  from {
+    bottom: -300px;
+    opacity: 7;
+  }
+  to {
+    bottom: 0;
+    opacity: 100;
+  }
+}
+
+@keyframes slideIn {
+  from {
+    bottom: -300px;
+    opacity: 0;
+  }
+  to {
+    bottom: 0;
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 /*# sourceMappingURL=test.css.map */
