--- a/style/test.scss
+++ b/style/test.scss
@@ -1,3 +1,5 @@
+/* --- PAGE ---*/
+
 $itemGrow: 1.2;
 $duration: 250ms;
 
@@ -12,16 +14,61 @@ body {
 
 h1 {
   font-family: Arial;
-  color: red;
+  color: rgba(184, 41, 41, 0.986);
   text-align: center;
+  margin: 0 0 15px 5%;
+}
+
+h1 a:visited, h1 a:hover, h1 a :focus {
+  text-decoration: none;
+  color: rgb(255, 162, 162);
 }
 
 h3 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: rgb(243, 239, 239);
+  color: rgb(255, 162, 162);
   width: 5em;
+  text-align: left;
+  margin-top: 8%;
+  margin-left: 6%;
 }
 
+nav ul {
+  list-style-type: none;
+  display: flex;
+  margin-right: 18px;
+  margin-bottom: 40px;
+}
+
+nav li {
+  margin-right: 50px;
+}
+nav a {
+  font-size: 1.3em;
+  color: #ffdddd;
+  margin-bottom: 25px;
+  text-decoration: none;
+}
+
+nav a:hover {
+  color: #b1acac;
+}
+
+#best_img {
+
+  padding-left: 50%;
+  padding-right: 50%;
+  align-items: center;
+  width: 14em;
+}
+
+h2, p {
+  text-decoration: rgb(255, 255, 255);
+  color: white;
+  margin-left: 15%;
+}
+
+/* --- CAROUSEL --- */
 .carousel {
   width: 100%;
   max-width: 964px;
@@ -81,6 +128,8 @@ h3 {
   transform: translate(-50%, -50%);
 }
 
+
+/* --- MODAL --- */
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
@@ -90,72 +139,88 @@ h3 {
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  padding-top: 50px;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(238, 96, 96);
+  background-color: rgba(197, 38, 38, 0.5);
   -webkit-animation-name: fadeIn; /* Fade in the background */
   -webkit-animation-duration: 0.4s;
   animation-name: fadeIn;
   animation-duration: 0.4s;
+  
 }
 
 .modal-content {
   position: relative;
-  background-color: white;
+  background-color: rgb(252, 189, 189);
   padding: 20px;
   margin: auto;
   width: 75%;
+  text-justify: auto;
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
-  animation-duration: 0.4s;
+  animation-duration: 0.4s;  
+   
+
 }
+
+
 .close-btn {
   /* The Close Button */
-
-  color: white;
+  color: rgba(12, 1, 1, 0.048);
   float: right;
-  font-size: 18px;
+  font-size: 28px;
   font-weight: bold;
+}
+
+.close-btn:hover,
+.close-btn:focus {
+  color: rgb(7, 4, 4);
+  text-decoration: none;
   cursor: pointer;
 }
 
-// /* Add Animation */
-// @-webkit-keyframes slideIn {
-//   from {
-//     bottom: -300px;
-//     opacity: 0;
-//   }
-//   to {
-//     bottom: 0;
-//     opacity: 1;
-//   }
-// }
 
-// @keyframes slideIn {
-//   from {
-//     bottom: -300px;
-//     opacity: 0;
-//   }
-//   to {
-//     bottom: 0;
-//     opacity: 1;
-//   }
-// }
 
-// @-webkit-keyframes fadeIn {
-//   from {
-//     opacity: 0;
-//   }
-//   to {
-//     opacity: 1;
-//   }
-// }
+/* Add Animation */
+@-webkit-keyframes slideIn {
+  from {
+    bottom: -300px;
+    opacity: 7;
+  }
+  to {
+    bottom: 0;
+    opacity: 100;
+  }
+}
 
-// @keyframes fadeIn {
-//   from {
-//     opacity: 0;
-//   }
-//   to {
-//     opacity: 1;
-//   }
-// }
+@keyframes slideIn {
+  from {
+    bottom: -300px;
+    opacity: 0;
+  }
+  to {
+    bottom: 0;
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
